# c

./: .gitignore  LICENSE  PopulateDir.ps1
.github/workflows/: main.yml
Eltex/: task_1.c  task_2.c  task_3.c  task_4.c
Eltex/project/torrent_file_creator/: CMakeLists.txt  LinuxTest.c  color.h  torrentfile.h
Eltex/task_10/part1/: Makefile  main.c
Eltex/task_10/part2/: main.c
Eltex/task_10/part3/: main.c
Eltex/task_11/: Makefile  buyer.c  buyer.h  main.c  shop.c  shop.h  worker.c  worker.h
Eltex/task_12/part1/: Makefile  main.c
Eltex/task_12/part2/: Makefile  client.c  server.c
Eltex/task_12/part3/: Makefile  helper.c  helper.h  main.c
Eltex/task_13/part1_posix/: Makefile
Eltex/task_13/part1_posix/src/: client.c  common.h  server.c
Eltex/task_13/part1_sysv/src/: client.c  common.h  server.c
Eltex/task_13/part2/: Makefile
Eltex/task_13/part2/src/: client.c  client.h  common.h  log.c  log.h  main.c  queue.c  queue.h  server.c  test_gui.c  ui.c  ui.h
Eltex/task_14/part1_posix/src/: client.c  common.h  server.c
Eltex/task_14/part1_sysv/: Makefile
Eltex/task_14/part1_sysv/src/: client.c  common.c  common.h  server.c
Eltex/task_14/part2/: Makefile
Eltex/task_14/part2/src/: client.c  client.h  common.h  flags.h  main.c  msgq.c  msgq.h  server.c  ui.c  ui.h
Eltex/task_15/part1/: Makefile  producer.c  receiver.c
Eltex/task_15/part2/: main.c
Eltex/task_15/part3/: main.c
Eltex/task_16/part1/LOCAL_STREAM/: Makefile
Eltex/task_16/part3/: Makefile
Eltex/task_20/: Makefile  first.c  second.c  third.c
Eltex/task_6/: Makefile  abonent.c  abonent.h  list.c  list.h  main.c  utils.c  utils.h
Eltex/task_7/: Makefile  add.h  libcalc.h  main.c
Eltex/task_8/: Makefile  div.c  div.h  main.c  mul.h
Eltex/task_8/src/: helper.c  helper.h  main.c
Eltex/task_9/part1/: Makefile  main.c
Eltex/task_9/part2/: Makefile  colors.c  colors.h  main.c  panel.c  panel.h  utils.c  utils.h
Eltex/task_final/part1/: Makefile  README.md
Eltex/task_final/part2/: Makefile
books/The_C_Programming_Language/: 1-12.c  1-13.c  1-14.c  1-15.c  1-16.c  1-17.c  1-18.c  1-19.c  1-20.c  1-21.c  1-22.c  1-23.c  1-24.c
(+66 files in other folders)
